<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="us.paulcurtis.pcapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="us.paulcurtis.pcapp.ui.resume.ResumeFragment"
        android:label="@string/menu_resume"
        tools:layout="@layout/fragment_resume" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="us.paulcurtis.pcapp.ui.portfolio.PortfolioFragment"
        android:label="@string/menu_portfolio"
        tools:layout="@layout/fragment_slideshow" />
</navigation>